fix: lint, format, added biome, fixed logic

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "type": "module",
   "scripts": {
     "start": "bun run src/server.ts",
+    "start:br": "bun run src/server_BR.ts",
     "husky": "npx husky",
     "lint": "biome check src/ --fix --unsafe",
     "format": "biome format src/ --fix",
     "build": "bun build src/server.ts --outfile dist/server.js --target node --minify",
-    "build:binary": "bun build src/server.ts --compile --outfile telegram_bot_finances_server"
+    "build:binary": "bun build src/server.ts --compile --outfile telegram_bot_movies_server"
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,json,jsonc}": [
@@ -22,8 +23,9 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@biomejs/biome": "1.9.4",
     "grammy": "^1.36.3",
-    "zod": "^3.25.32",
-    "@biomejs/biome": "1.9.4"
+    "node-telegram-bot-api": "^0.66.0",
+    "zod": "^3.25.32"
   }
 }
